
gridftpdir = $(sysconfdir)/gridftp-lfs
dist_gridftp_DATA = gridftp.conf gridftp-inetd.conf gridftp-debug.conf replica-map.conf

sysconfigdir = $(sysconfdir)/sysconfig/gridftp.conf.d
dist_sysconfig_DATA = gridftp-lfs gridftp-lfs-environment-bootstrap

envdir = $(datadir)/gridftp-lfs
dist_env_DATA = gridftp-lfs-environment

